Update 네트워크 장치(허브, 스위치, 라우터).md

--- a/Network/네트워크 장치(허브, 스위치, 라우터).md
+++ b/Network/네트워크 장치(허브, 스위치, 라우터).md
@@ -127,32 +127,32 @@ L2-MAC 주소, L3-프로토콜 주소, L4-세션주소
 
 ### 4.1 Layer2 스위치
 
-. L2 스위치로 가장 흔히 볼수 있는 스위칭 방식이며, 다른 방식에 비해 저렴하다.
+- L2 스위치로 가장 흔히 볼수 있는 스위칭 방식이며, 다른 방식에 비해 저렴하다.
 
-. 패킷의 MAC 주소를 읽어 스위칭을 하고, MAC이 OSI 계층 중 2 계층에 해당하기 때문에 Layer 2 스위치라 한다.
+- 패킷의 MAC 주소를 읽어 스위칭을 하고, MAC이 OSI 계층 중 2 계층에 해당하기 때문에 Layer 2 스위치라 한다.
 
-. 기본적인 동작은 브리지나 스위칭 허브는 모든 자료를 보내는 곳으로 수신 번지를 전송한다.
+- 기본적인 동작은 브리지나 스위칭 허브는 모든 자료를 보내는 곳으로 수신 번지를 전송한다.
 
-. 브리지는 어떤 포트에서 받은 데이터를 다른 모든 포트로 전송하나 L2 스위치 허브에서는 여러개의 포트 중 특정 포트로만 전송한다.
+- 브리지는 어떤 포트에서 받은 데이터를 다른 모든 포트로 전송하나 L2 스위치 허브에서는 여러개의 포트 중 특정 포트로만 전송한다.
 
 
 >☑️ **<동작 원리>**
 >
->. 다른 스위치처럼 프로세서,메모리,펌웨어(운영체제)가 담겨 있는 FLASH ROM으로 이루어져 있다.
+>- 다른 스위치처럼 프로세서,메모리,펌웨어(운영체제)가 담겨 있는 FLASH ROM으로 이루어져 있다.
 >
->. 부팅이 되면 L2스위치는 각 포트별로 연결되어 있는 노드의 상태를 확인한다.
+>- 부팅이 되면 L2스위치는 각 포트별로 연결되어 있는 노드의 상태를 확인한다.
 >
->. 각 노드의 MAC 주소를 알아내서 이것을 메모리에 적재하게 되고 , 패킷이 전달될 때 이 정보를 바탕으로 스위칭하게 된다.
+>- 각 노드의 MAC 주소를 알아내서 이것을 메모리에 적재하게 되고 , 패킷이 전달될 때 이 정보를 바탕으로 스위칭하게 된다.
 >
 >. 스위치의 운영 체제가 적재되거나 스위칭을 할 때 각 포트별 주소 정보가 저장된다. - 스위칭 허브 메모리
 >
->. 스위칭 허브를 선택할 때 스위칭 허브가 얼마만큼의 메모리와 어느 정도의 주소 테이블을 저장할 수 있는지를 확인한다.
-
->. 보통의 스위치는 메모리 용량 이상의 주소가 저장될 경우(연결 노드가 많은 경우) 스위칭 기능이 중지되고, 더미 허브와 같은 방식으로 동작한다.
+>- 스위칭 허브를 선택할 때 스위칭 허브가 얼마만큼의 메모리와 어느 정도의 주소 테이블을 저장할 수 있는지를 확인한다.
 >
->장점 : 구조가 간단하며, 신뢰성이 높다. / 가격이 저렴하고, 성능이 높다.
+>- 보통의 스위치는 메모리 용량 이상의 주소가 저장될 경우(연결 노드가 많은 경우) 스위칭 기능이 중지되고, 더미 허브와 같은 방식으로 동작한다.
 >
->단점 : Broadcast 패킷에 의해 성능 저하가 발생한다. - 라우팅이 불가능 / 상위 레이어 프로토콜을 이용한 스위칭이 불가능 하다.
+>**장점** : 구조가 간단하며, 신뢰성이 높다. / 가격이 저렴하고, 성능이 높다.
+>
+>**단점** : Broadcast 패킷에 의해 성능 저하가 발생한다. - 라우팅이 불가능 / 상위 레이어 프로토콜을 이용한 스위칭이 불가능 하다.
 
 
 
@@ -160,44 +160,44 @@ L2-MAC 주소, L3-프로토콜 주소, L4-세션주소
 
 L3 스위치로 포트간 패킷 스위칭을 위해 패킷의 IP나 IPX 주소를 읽어서 스위칭을 하며, 통신 경로를 한 번만 설정한다.
 
-. 해당 프로토콜을 쓰는 패킷에 대해 스위칭이 가능하며, IP나 IPX 주소가 OSI 7 계층 중 3 계층에 해당하기 때문에 Layer 3 스위치라 한다.
+- 해당 프로토콜을 쓰는 패킷에 대해 스위칭이 가능하며, IP나 IPX 주소가 OSI 7 계층 중 3 계층에 해당하기 때문에 Layer 3 스위치라 한다.
 
-. L2 스위치에 라우팅(Routing) 기능을 추가하고, 대부분의 고성능 하드웨어를 기초로 하였다. - 기본 구성은 L2와 동일
+- L2 스위치에 라우팅(Routing) 기능을 추가하고, 대부분의 고성능 하드웨어를 기초로 하였다. - 기본 구성은 L2와 동일
 
 
 >☑️ **<동작원리>**
 >
->. 부팅 시 각 포트로 연결된 노드의 상태를 확인하고, 노드의 주소를 테이블의 메모리에 적재하여 패킷이 전달될 때 이 정보를 바탕으로 스위칭을 한다.
+>- 부팅 시 각 포트로 연결된 노드의 상태를 확인하고, 노드의 주소를 테이블의 메모리에 적재하여 패킷이 전달될 때 이 정보를 바탕으로 스위칭을 한다.
 >
->. L3은 L2에 비해 고급 기능을 지원하므로 L2는 일부 고급 기종에서만 스위치에 IP주소를 할당하지만 L3은 기본적으로 스위치 자체에 IP 주소를 할당한다.
+>- L3은 L2에 비해 고급 기능을 지원하므로 L2는 일부 고급 기종에서만 스위치에 IP주소를 할당하지만 L3은 기본적으로 스위치 자체에 IP 주소를 할당한다.
 >
->. 각 포트별 IP 주소 할당 내역 등을 설정하여 스위칭 할 때 설정된 값을 이용한다. - 기본 설정 모드를 지원
+>- 각 포트별 IP 주소 할당 내역 등을 설정하여 스위칭 할 때 설정된 값을 이용한다. - 기본 설정 모드를 지원
 >
->장점 : Broadcast 트래픽으로 전체 성능 저하를 막을 수 있다. / 트래픽 체크, 가상 랜 등의 많은 부가 기능을 갖고 있다.
+>**장점** : Broadcast 트래픽으로 전체 성능 저하를 막을 수 있다. / 트래픽 체크, 가상 랜 등의 많은 부가 기능을 갖고 있다.
 >
->단점 : 특정 프로토콜을 이용해야 스위칭을 할 수 있다. / 대부분의 트래팩이 서브텟의 한계를 넘는다.
+>**단점** : 특정 프로토콜을 이용해야 스위칭을 할 수 있다. / 대부분의 트래팩이 서브텟의 한계를 넘는다.
 
 
 ### 4.3 Layer 4 스위치
 
 L3과 같이 프로토콜을 기반으로 하며, 어플리케이션별로 우선 순위를 두어 스위칭이 가능하다.
 
-. 여러대의 서버를 1대처럼 묶을 수 있는 부하 분산 (Load Balancing) 기능을 제공한다. - 많은 양의 트래픽을 여러 서버로 분산 가능
+- 여러대의 서버를 1대처럼 묶을 수 있는 부하 분산 (Load Balancing) 기능을 제공한다. - 많은 양의 트래픽을 여러 서버로 분산 가능
 
-. 각 제조 업체별로 설정 방법 및 제공 기능이 다르므로 , 특별한 표준을 지정하기가 힘들다.
+- 각 제조 업체별로 설정 방법 및 제공 기능이 다르므로 , 특별한 표준을 지정하기가 힘들다.
 
 
 >☑️ **<동작원리>**
 >
->. L3 스위치와 유사한 구조와 동작 원리를 갖고 있지만 가상 랜 기능과 그룹화, 부하 분산 등의 고급 설정이 추가로 포함되는 점이 다르다.
+>- L3 스위치와 유사한 구조와 동작 원리를 갖고 있지만 가상 랜 기능과 그룹화, 부하 분산 등의 고급 설정이 추가로 포함되는 점이 다르다.
 >
->. TCP/IP 포로토콜을 기반으로 동작하는 것이 대부분이며, 포트 번호를 이용한 스위칭 까지도 가능하다.
+>- TCP/IP 포로토콜을 기반으로 동작하는 것이 대부분이며, 포트 번호를 이용한 스위칭 까지도 가능하다.
 >
->. 포트 번호는 수신 컴퓨터에서 IP 패킷의 형태로 결정하여 상위 계층으로 전달한다.
+>- 포트 번호는 수신 컴퓨터에서 IP 패킷의 형태로 결정하여 상위 계층으로 전달한다.
 >
->장점 : 보안성이 높고 고급 스위칭 설정이 가능하다. - 상황에 적절한 설정 / 용량에 관계 없이 네트워크의 성능 개선에 기여한다.
+>**장점** : 보안성이 높고 고급 스위칭 설정이 가능하다. - 상황에 적절한 설정 / 용량에 관계 없이 네트워크의 성능 개선에 기여한다.
 >
->단점 : 프로토콜에 의존적이며, 설정이 복잡하다. / 고가의 장비로 L2,L3 스위치와 적절한 혼합 배치가 필요하다.
+>**단점** : 프로토콜에 의존적이며, 설정이 복잡하다. / 고가의 장비로 L2,L3 스위치와 적절한 혼합 배치가 필요하다.
 
 
 ---
