--- a/DB/인덱스_생성방법.md
+++ b/DB/인덱스_생성방법.md
@@ -152,7 +152,7 @@ SELECT a.name      AS table_name
 
 ![인덱스생성방법_mssqlserver_select.png](./image/인덱스생성방법_mssqlserver_select.png)
 
-## 2.5
+## 2.5 클러스터형 인덱스
 
 ```sql
 /* 클러스터형 인덱스 생성 */
