Update 네트워크 장치(허브, 스위치, 라우터).md
issue 업데이트

--- a/Network/네트워크 장치(허브, 스위치, 라우터).md
+++ b/Network/네트워크 장치(허브, 스위치, 라우터).md
@@ -39,9 +39,10 @@ DataLink layer : 오류와 흐름제거 → 신뢰성 있는 데이터 전송
     - Cut Through : 데이터의 목적지 주소만 확인 후 바로 전송 처리하는 방식
     - Fragment Free : 프레임의 앞 64바이트만 읽어 에러를 처리하고, 목적지 포트로 전송하는 방식
 
-### B.3  NIC; Network Interface Card
+### B.3  NIC; Network Interface Card(Controller)
 
 - 외부 네트워크와 접속하여 가장 빠른 속도로 데이터를 주고 받을 수 있게 컴퓨터 내에 설치되는 장치
+- 옛날에는 선택적으로 설치했지만 요새는 보통 메인보드에 다 내장되어있다.
 
 ### B.3 스위칭 허브
 
@@ -132,7 +133,7 @@ L2-MAC 주소, L3-프로토콜 주소, L4-세션주소
 
 - 패킷의 MAC 주소를 읽어 스위칭을 하고, MAC이 OSI 계층 중 2 계층에 해당하기 때문에 Layer 2 스위치라 한다.
 
-- 기본적인 동작은 브리지나 스위칭 허브는 모든 자료를 보내는 곳으로 수신 번지를 전송한다.
+- 기본적인 동작은, 브리지나 스위칭 허브가 모든 자료를 보내는 곳으로 수신 번지를 전송한다.
 
 - 브리지는 어떤 포트에서 받은 데이터를 다른 모든 포트로 전송하나 L2 스위치 허브에서는 여러개의 포트 중 특정 포트로만 전송한다.
 
