--- a/Network/로드밸런싱.md
+++ b/Network/로드밸런싱.md
@@ -8,7 +8,16 @@
 - Scale Out: 여러 대의 서버를 두는 것
 
 Scale Out 방식은 여러 대의 서버로 트래픽을 균등하게 분산해주는 로드밸런싱이 반드시 필요함!
+> 물리적인 서버에서 Scale Out하는 건 한계가 있음(메인보드에는 그래픽 카드를 최대 2개밖에 장착하지 못함)      
+> -> 하지만 클라우드는 공간의 제약이 없기 때문에 Scale Out이 무한대로 가능함
+>
+> 💡 **AWS의 Auto Scaling**
+> - Scale Out을 자동화해주는 서비스
+> - 애플리케이션을 모니터링해서 용량을 자동으로 조절함(자동으로 Scale In/Out 해줌)
+> - EC2 인스턴스들을 그룹으로 구성(=Auto Scaling 그룹)하고 최소/최대 인스턴스 수를 지정하면 이 범위 안에서 Scale In/Out이 일어남
+> - Auto Scaling 그룹을 로드 밸런서에 연결할 수 있음
 
+<br></br>
 ![load_1.png](./image/load_1.png)
 
 로드밸런서는 클라이언트와 서버풀(=서버팜, 분산 네트워크를 구성하는 서버들의 그룹) 사이에 위치함
