--- a/Network/소켓.md
+++ b/Network/소켓.md
@@ -117,6 +117,8 @@ int accept(int sockfd, struct sockaddr* addr, socklen_t* addrlen);
 // sockfd: 서버 소켓의 파일 디스크립터 전달
 // addr: 연결요청 한 클라이언트의 주소정보가 담긴 구조체
 // addrlen: 두 번째 매개변수 addr에 전달된 주소의 변수 크기
+
+* accept 함수는 '소켓 생성 + 연결 요청을 한 클라이언트 소켓과 자동으로 연결' 작업이 포함되기 때문에 함수 실행 성공 시 생성된 소켓의 파일 디스크립터 리턴 
 ```
 
 accept 함수 호출 성공 시 내부적으로 데이터 입출력에 사용할 소켓을 생성하고, 그 소켓의 파일 디스크립터를 반환함
