--- a/Network/소켓.md
+++ b/Network/소켓.md
@@ -7,6 +7,7 @@
 - 소켓 연결은 TCP와 UDP 방식으로 나눌 수 있고, 일반적인 프로그래밍에서는 대부분 TCP 연결을 사용
 - 소켓의 역할에 따라 서버 소켓, 클라이언트 소켓으로 구분됨
 - 주로 서버는 리눅스 운영체제 기반, 클라이언트는 윈도우 운영체제 기반으로 개발함
+- 사용 예시: [IPC](https://github.com/psyStudy/CS_study/blob/main/OS/IPC.md), WebSocket 등
 
 <br></br>
 
