--- a/Network/웹 캐시.md
+++ b/Network/웹 캐시.md
@@ -109,6 +109,8 @@
 - Cache-Control: s-maxage
     - 프록시 캐시에만 적용되는 max-age
 
+➕ Cache-Control 옵션은 1개 이상 사용 가능함 ex) Cache-Control: public, max-age=3600 (콤마로 구분)
+
 <br></br>
 <br></br>
 
