--- a/Java/오버라이딩, 오버로딩.md
+++ b/Java/오버라이딩, 오버로딩.md
@@ -12,7 +12,7 @@
 ### 조건
 
 - 메소드 이름이 같고, 매개변수의 개수, 타입이 달라야함.
-- 리턴 type 만 다른것은 오버로딩 할 수 없음.
+- 리턴 type 만 다른것은 오버로딩 x
 - 접근 제어자도 자유롭게 지정가능 (하지만 접근 제어자만 다른 것은 오버로딩 x)
 
 ### 예시
