--- a/Java/오버라이딩, 오버로딩.md
+++ b/Java/오버라이딩, 오버로딩.md
@@ -96,6 +96,9 @@ Class Main {
 
 코드상으로 검사했을 때 오버라이딩이 실제로 시행되지 않으면 컴파일 시 오류를 출력한다.
 
+@Override를 사용하지 않아도, 코드를 실행하는데 문제가 발생하지는 않지만, 해당 메소드가 오버라이딩 메소드라는 것을 명시적으로 알 수 있고,
+컴파일 시 상속한 부모 클래스에 해당 메소드가 있는지 여부등을 통해 예외를 발생할 수 있어 오류를 인지할 수 있도록 하므로 써주는 것이 좋다. (꼭 써주자!) 
+
 # 3. 오버로딩 vs 오버라이딩
 
 이름이 비슷하지만, 명백히 다른 개념임을 유념하자!
