Update 추상 클래스와 인터페이스.md

--- a/Java/추상 클래스와 인터페이스.md
+++ b/Java/추상 클래스와 인터페이스.md
@@ -78,10 +78,10 @@ public abstract String fail(){ return "Hi" } //컴파일 오류
 
 - 하나 이상의 추상 메소드를 포함하느 클래스.
 - 목적 : 추상 클래스를 상속받는 **자식 클래스가 “반드시” 이 추상 메소드를 구현하도록 하기 위함.**
-    1. 공통된 필드와 메서드를 통일할 수 있다.
+    1. 공통된 필드 이름과 공통된 메서드 이름을 사용하여 통일할 수 있다.
         - 추상 메소드는 추상 클래스에서 선언되고, 자식 클래스에서 반드시 오버라이딩 해야하만 사용할 수 있다.
         - 일반 메소드로 구현되어 있으면, 사용자에 따라 해당 메소드를 구현할 수도 안 할수도 있기 때문.
-        - 인스턴스를 만드려면 추상 메소드를 구현해야하고, 필드와 메서드 이름을 통일하여 유지보수성을 높일 수 있다.
+        - 인스턴스를 만드려면 추상 메소드를 구현해야하고, 공통된 필드 이름과 공통된 메서드 이름을 사용하여 유지보수성을 높일 수 있다.
     2. 실체 클래스 구현시 시간절약을 할 수 있다. (일반 개발자 입장에서)
         - 처음 부터 설계하는 것이 아니라, 강제로 주어지는 필드와 메서드를 가지고 구현만 하면 됨.
         - EX) 안로이드 개발시 구글이 미리 만들어둔 안드로이드 SDK에서 제공하는 추상클래스를 상속받아 개발자는 내부동작만 구현하면 된다!
@@ -188,9 +188,7 @@ class DropShip extends Unit{
 }
 ```
 
-- 추상 클래스로 안해도 되잖아? → 뒤에 설명
-    - 간단하게, Java8의 인터페이스도 똑같이 안에 필드를 선언해 줄 수 있지만, 자동으로 *public static final* 처리가 되기 때문에 이른바 공통 상수가 되어 버린다.
-    - 따라서 자식 클래스에서 중복되는 변수들을 상속으로 묶어 통합 시켜주는 기능 자체는 인터페이스로 구현할 수 없고 오로지 추상 클래스 로만 가능하다.
+
 
 **예제3 - 구현 강제성을 통한 기능 보장(인터페이스도 가능)**
 
@@ -537,7 +535,7 @@ public class Main {
 }
 ```
 
-### 1-●) implSpec 주석문서
+### 1-●) @ implSpec 주석문서
 
 - 디폴트 메서드는 보통 인터페이스 구현 후, 수정과정에서 인터페이스 모든 구현체에게 수정 없이 광역으로 함수를 만들어 주고 싶을 때 사용한다.
 - 이는 컴파일 에러가 아니더라도 런타임 에러가 발생할 수 있는 리스크가 존재합.
@@ -611,7 +609,7 @@ interface IJson {
 2. 인터페이스의 디폴트 메서드와 부모 메스드 간의 충돌   
 - 자식 클래스에서 인터페이스와 부모 클래스를 동시에 extends / implement 하였을 때 디폴드 메서드와 인스턴스 메서드 간의 충돌
 - 부모 클래스의 메서드가 상속되고 디폴트 메서드는 무시된다.
-- 인터페이스 쪽 디폴드 메서드를 사용해야한다면, 피요한 쪼그이 메서드와 같은 내용으로 오버라이딩 한다.
+- 인터페이스 쪽 디폴드 메서드를 사용해야한다면, 필요한 쪽의 메서드와 같은 내용으로 오버라이딩 한다.
 
 ```java
 interface A1{
@@ -818,15 +816,7 @@ public class Main {
 - 인터페이스 : 인터페이스에 정의된 메서드를 각 목적에 맞게 기능을 구현하는 느낌 implements
 
 ### 추상 클래스를 사용하는 경우
-
-- 상속 받은 클래스들이 공통으로 가지는 메소드와 필드가 많아 중복 멤버 통합을 할때
-    
-    ![interface4.png](./image/interface4.png)
-    
-- 멤버에 public이외의 접근자(protected, private) 선언이 필요한 경우
 - non-static, non-final 필드 선언이 필요한 경우(각 인스턴스에서 상태 변경을 위한 메소드가 필요한 경우 )
-- 요구사항과 함께 구현 세부 정보의 일부 기능만 지정했을 때
-- 추상클래스는 이를 상속할 객체들의 공통점을 찾아 추상화 시켜 놓은 것으로, 상속 관계를 타고 올라갔을 때 같은 부모 클래스를 상속하며 부모 클래스가 가진 기능을 구현해야할 경우 사용한다.
 - 명확한 계층 구조를 추상화 할 경우
     - 인터페이스나 추상 메소드를 이용한 구현 원칙을 강제한다는 점은 같지만, 추상클래스는 '클래스로서' 클래스와 의미있는 연관 관계를 구축할때 사용된다라고 보면 된다.
 - 논리적 다형성
