Update 추상 클래스와 인터페이스.md

--- a/Java/추상 클래스와 인터페이스.md
+++ b/Java/추상 클래스와 인터페이스.md
@@ -440,7 +440,7 @@ public class Main {
 }
 ```
 
-### 6) 마터 인터페이스
+### 6) 마커 인터페이스 Marker intereface
 
 - 일반적인 인터페이스와 동일하지만, 사실상 아무 메소드도 선언하지 않은 빈 껍데기 인터페이스.
 - 객체 타입과 관련된 정보만을 제공해주는 역할이다.
@@ -488,6 +488,7 @@ class Snake extends Animal { }
 
 - 원래 인터페이스 메소드는 직접 구현부를 가질 수 없었다.
 - **자바8 부터 default method와 static method를 통해 추상클래스 처럼 구현부를 가질 수 있게 되었다. → 이 기능으로 추상 클래스와 차이점이 거의 사라짐!**
+- 자바9 부터는 private 메소드도 가질 수 있게 되었다.
 - 이는 이전에 개발된 인터페이스를 사용하여 java8의 람다 표현식 기능을 활용할 수 있도록 하위 호완성을 위해 추가된 것이다.
     - EX) java8부터 새로 추가된 스트림이나 람다 같은 함수형 프로그래밍을 collection 클래스에서 사용하기 위해, 기존에 만들어 놓았던 인터페이스들을 구현하고 있는 collection 클래스들의 구조에서 특정한 기능을 추가해야하는 상황이 오게 되었다.
 
@@ -697,94 +698,17 @@ public class Main {
 
 ### 2) static 메소드
 
-- 인스턴스 생성과 상관없이 인터페이스 타입으로 접근해 사용할 수 있는 메서드
+- 자바8 부터 인터페이스에서 사용가능.
 - 일반 클래스의 static 메소드와 똑같이 취급한다.
 - 해당 타입 관련 헬퍼 또는 유틸리티 메소드를 제공할 때, 인터페이스에 스태틱 메소드로 제공하기도 한다.
 
-```java
-interface Calculator {
-    public int plus(int i, int j);
-    public int multiple(int i, int j);
-
-    // 디폴트 메서드
-    default int sub(int i, int j){
-        return i - j;
-    }
-
-    // 스태틱 메서드
-    public static void explain(){
-        System.out.println("interface static 메서드 입니다. 이 인터페이스는 pluc, multipe, sub 기능을 제공하는 메서드를 지니고 있습니다. (설명)");   
-    }
-}
-
-class MyCalculator implements Calculator {
-    @Override
-    public int plus(int i, int j) {  return i + j; }
-    @Override
-    public int multiple(int i, int j) { return i * j; }
-}
-
-public class Main {
-    public static void main(String[] args){
-        // 클래스 처럼 static 메소드 호출 하면 된다.
-        Calculator.explain(); // "interface static 메서드 입니다. 이 인터페이스는 pluc, multipe, sub 기능을 제공하는 메서드를 지니고 있습니다. (설명)"
-    }
-}
-```
-
 ### 3) private 메소드
 
-- 자바9 버전에 추가된 메서드
+- 자바9 부터 인터페이스에서 사용가능
 - 인터페이스에 default, static 메소드가 생긴 이후, 이러한 메소드들의 로직을 공통화하고 재사용하기 위해 생긴 메소드
-- private 메소드도 구현부를 가져야한다.
-- 단, private 메소드는 인터페이스 내부에서만 돌아가는 코드이다. (인터페이스를 구현한 클래스에서 사용하거나 재정의 할 수 없음)
 - 따라서 인터페이스 내부에서 private 메소드를 호출할때, default 메소드 내부에서 호출해야 하며,만일 private ~~static~~ 키워드를 붙인 메소드는 static 메소드에서만 호출이 가능하다.
 - (상수는 private로 만들 수 없다. 자동으로 public static final)
 
-```java
-interface Calculator {
-    public int plus(int i, int j);
-    public int multiple(int i, int j);
-
-    // private 메서드
-    private void printf() {
-        System.out.println("private 메서드는 default 내부에서만 호출이 가능합니다.");
-    }
-
-    // private 스태틱 메서드
-    private static void printfStatic() {
-        System.out.println("private static 메서드는 static 메서드 내부에서만 호출이 가능합니다.");
-    }
-
-    // 디폴트 메서드
-    default void callPrivate() {
-        printf(); // private 메서드 호출
-    }
-
-    // 스태틱 메서드
-    static void callPrivateStatic() {
-        printfStatic(); // private 스태틱 메서드 호출
-    }
-}
-
-class MyCalculator implements Calculator {
-    @Override
-    public int plus(int i, int j) {  return i + j; }
-    @Override
-    public int multiple(int i, int j) { return i * j; }
-}
-
-public class Main {
-    public static void main(String[] args){
-        // 인터페이스 디폴트 메서드를 통한 private 메서드 호출
-        Calculator c = new MyCalculator(); // 인터페이스 타입으로 업캐스팅
-        c.callPrivate(); // "private 메서드는 default 내부에서만 호출이 가능합니다."
-
-        // 인터페이스 스태틱 메서드를 통한 private static 메서드 호출
-        Calculator.callPrivateStatic(); // "private static 메서드는 static 메서드 내부에서만 호출이 가능합니다."
-    }
-}
-```
 
 # 3. 인터페이스와 추상 메소드 비교
 
