--- a/Java/함수형 인터페이스.md
+++ b/Java/함수형 인터페이스.md
@@ -109,9 +109,10 @@ public class Test{
 - 람다식 : () -> T
 
 ```java
+/*생김새 = 실제 프로그래밍시 필요없음 다른 함수형 인터페이스도 동일*/
 @FunctionalInterface
 public interface Supplier<T> {
-    T get(); // T get()을 추상메소드로 갖음.
+    T get(); // T get()을 추상메소드로 가짐.
 }
 
 // 사용 예시
