functional interface issue-compartator

--- a/Java/함수형 인터페이스.md
+++ b/Java/함수형 인터페이스.md
@@ -329,6 +329,50 @@ public interface Comparator<T> {
     int compare(T o1, T o2);
 }
 ```
+- 예제 : 17살 2반 학생과 18살 1반 학생을 비교(정렬)하고 싶음 -> 비교방식을 정의
+```java
+import java.util.Comparator;
+
+class Student implements Comparator<Student> {
+ 
+	int age;			// 나이
+	int classNumber;	// 학급
+	
+	Student(int age, int classNumber) {
+		this.age = age;
+		this.classNumber = classNumber;
+	}
+	
+	@Override
+	public int compare(Student o1, Student o2) {
+		return o1.classNumber - o2.classNumber;
+	}
+}
+ 
+public class Test {
+	public static void main(String[] args)  {
+ 
+		Student a = new Student(17, 2);	// 17살 2반
+		Student b = new Student(18, 1);	// 18살 1반
+		Student c = new Student(15, 3);	// 15살 3반
+			
+		// a객체와는 상관 없이 b와 c객체를 비교한다.
+		int isBig = a.compare(b, c);
+		
+		if(isBig > 0) {
+			System.out.println("b객체가 c객체보다 큽니다.");
+		}
+		else if(isBig == 0) {
+			System.out.println("두 객체의 크기가 같습니다.");
+		}
+		else {
+			System.out.println("b객체가 c객체보다 작습니다.");
+		}
+		
+	}
+}
+ 
+```
 
 ## 2.6. Runnable
 
@@ -466,3 +510,4 @@ Supplier<String> supplier = String::new;
 - [https://gowoonsori.com/java/lambda/](https://gowoonsori.com/java/lambda/)
 - [https://developer-talk.tistory.com/460](https://developer-talk.tistory.com/460)
 - [https://bcp0109.tistory.com/313](https://bcp0109.tistory.com/313)
+- [https://st-lab.tistory.com/243](https://st-lab.tistory.com/243)
