컴퓨터의 구성요소

--- a/OS/컴퓨터의 구성요소.md
+++ b/OS/컴퓨터의 구성요소.md
@@ -1,186 +1,120 @@
 # 컴퓨터의 구성요소
 
-## 컴퓨터의 구성요소
+### 컴퓨터의 3대 구성요소 = 중앙처리장치, 기억장치, 입출력장치
 
-- 하드웨어
-- 소프트웨어
+### 컴퓨터의 5대 구성요소 = 연산장치, 제어장치, 기억장치, 입력장치, 출력장치
 
-![https://blog.kakaocdn.net/dn/UgPkB/btrea2Sxz5D/tUIIwzH4F8yreT30AhsWx0/img.png](https://blog.kakaocdn.net/dn/UgPkB/btrea2Sxz5D/tUIIwzH4F8yreT30AhsWx0/img.png)
+## 하드웨어
 
-# 하드웨어
+![computer_1.png](%E1%84%8F%E1%85%A5%E1%86%B7%E1%84%91%E1%85%B2%E1%84%90%E1%85%A5%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%AE%E1%84%89%E1%85%A5%E1%86%BC%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20c270799c368d46c5a91e7ffaea17dbe2/computer_1.png)
 
-![computer1.png](./image/computer1.png)
-### 1. CPU(중앙처리장치)
+### 중앙처리장치(CPU)
 
-프로그램의 실행과 데이터 처리를 담당하는 핵심 장치 (=프로세서)
+사람으로 치면 두뇌에 해당하는 부분으로, 주기억장치에서 프로그램의 명령어와 데이터를 읽어와 계산을 처리하고 명령어의 수행 순서를 제어함
 
-- **제어장치 CU**(Control Unit) - 데이터의 흐름 제어
-- **연산장치 ALU**(Arithmetic and Logic Unit) - 데이터 처리를 위한 산술연산과 논리연산 담당
-- **레지스터 Register** - CPU 내부에서 처리할 명령어나 연산에 필요한 임시 데이터 저장
-- **Internal Bus** - 데이터 이동
+CU, ALU, Register, Internal Bus로 구성되어 있음 
 
-### 2. 기억장치(Memory)
+- **제어장치(CU)**
+    - 기억장치로부터 프로그램의 명령어를 순차적으로 꺼내 해독하고, 이에 따라 명령어 실행에 필요한 제어 신호를 연산장치, 입출력 장치 등으로 보내는 장치
+- **연산장치(ALU)**
+    - 제어장치의 명령에 따라 실제로 연산을 수행하는 장치
+    - 산술, 논리, 이동 등 다양한 연산을 수행함
+- **레지스터(Register)**
+    - CPU 내부에서 처리할 명령어나 연산에 필요한 임시 데이터를 저장하는 장치
+- **내부 버스(Internal Bus)**
+    - CU, ALU, 레지스터 간의 데이터를 이동시킴
+    - CPU 외부의 시스템 버스와는 직접적으로 연결되어 있지 않음
 
-프로그램, 데이터 등을 저장
+### 기억장치(Memory)
 
-![https://blog.kakaocdn.net/dn/Wbv7g/btrKn8Hf5vs/5T3xKExkghq0A6Impns0i0/img.png](https://blog.kakaocdn.net/dn/Wbv7g/btrKn8Hf5vs/5T3xKExkghq0A6Impns0i0/img.png)
+프로그램, 데이터 등을 저장하는 장치로, 주기억장치와 보조기억장치로 나뉨
 
-### 2-1. 보조기억장치
+![computer_2.png](%E1%84%8F%E1%85%A5%E1%86%B7%E1%84%91%E1%85%B2%E1%84%90%E1%85%A5%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%AE%E1%84%89%E1%85%A5%E1%86%BC%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20c270799c368d46c5a91e7ffaea17dbe2/computer_2.png)
 
-- 컴퓨터에게 필요한 모든 정보를 반영구적으로 저장
-- 대용량 데이터를 저장할 수 있지만, 데이터를 읽고 쓰는 속도가 느림
-- CPU와 직접적으로 소통할 수 없음
-- 예시 - SSD, HDD
-
-<aside>
-👉🏻 **SSD(Solid-state drive)**
-
-</aside>
-
-![Untitled.png](%E1%84%8F%E1%85%A5%E1%86%B7%E1%84%91%E1%85%B2%E1%84%90%E1%85%A5%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%AE%E1%84%89%E1%85%A5%E1%86%BC%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20a21b8032bc8f46d4a8b7a01a0a6601d5/Untitled.png)
-
-- 전기적으로 데이터를 저장하여 물리적으로 회전하거나 움직이는 요소가 없음
-- HDD에 비해 훨씬 빠름
-- 비싸다는 단점
-
-<aside>
-👉🏻 **HDD(Hard Disk Driver)**
-
-</aside>
-
-![computer3.png](./image/computer3.png)
-
-- 물리적인 디스크를 고속으로 회전시켜 데이터를 저장하는 장치
-- 충격에 약하며 소음이 다소 발생
-- SSD가 나오면서 최근에 많이 소멸되는 추세
-
-### 2-2 주기억장치
-
-- 컴퓨터가 프로그램을 수행하는 동안 필요한 모든 데이터들을 저장
-- 예시 - RAM, ROM
-
-<aside>
-👉🏻 **RAM**
-
-</aside>
-
-- 읽고 쓰기가 가능
-- 응용 프로그램, 운영체제 등을 불러와 CPU가 작업할 수 있도록 하는 기억장치
-- 임의 접근이 가능한 메모리
-- 전원을 끄면 데이터가 사라지는 휘발성 메모리 > 그럼에도 쓰는 이유는 속도가 빠르다
-
-<aside>
-👉🏻 **ROM**
-
-</aside>
-
-- 전원이 끊어져도 기록된 데이터들이 소멸되지 않는 비휘발성 메모리
-- 오직 기억된 데이터를 읽기만 가능한 장치
-- 시스템에 기억시키고 변화시키면 안 되는 주요 데이터가 저장됨
-
-### 2-3 캐시 메모리
-
-- CPU가 사용한 데이터와 관련된 데이터 중 재사용 가능성이 높은 데이터를 주기억장치로부터 미리 임시 저장
+- **주기억장치**
+    - CPU와 가까이 있어 액세스 속도가 높지만, 프로그램 실행 중에만 사용할 수 있는 휘발성 기억장치
+    - 프로그램을 실행하는 동안 필요한 데이터를 일시적으로 저장함
+    - ROM, RAM 등이 있음 (ROM은 주로 주기억장치로 사용되진 않음)
+- **보조기억장치**
+    - 주기억장치에 비해 읽기/쓰기 속도가 느리지만, 영구 저장이 가능함
+    - HDD, SDD 등이 있음
+    
 
 ---
 
-### 3. 입출력 장치
+- **RAM(Random Access Memory)**
+    
+    ![computer_5.png](%E1%84%8F%E1%85%A5%E1%86%B7%E1%84%91%E1%85%B2%E1%84%90%E1%85%A5%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%AE%E1%84%89%E1%85%A5%E1%86%BC%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20c270799c368d46c5a91e7ffaea17dbe2/computer_5.png)
+    
+    - 읽고 쓰기가 가능한 메모리
+    - 자주 쓰는 데이터를 RAM에 위치시켜놓고 CPU와 빠르게 데이터를 주고받게 됨
+    - 데이터 임의접근이 가능함(101~106호 중 104호로 바로 이동 가능한 느낌)
+    - 전원을 끄면 데이터가 사라지는 휘발성 메모리
 
-### 3-1. 입력장치
+- **ROM(Read Only Memory)**
+    
+    ![computer_6.png](%E1%84%8F%E1%85%A5%E1%86%B7%E1%84%91%E1%85%B2%E1%84%90%E1%85%A5%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%AE%E1%84%89%E1%85%A5%E1%86%BC%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20c270799c368d46c5a91e7ffaea17dbe2/computer_6.png)
+    
+    - 읽기만 가능한 메모리
+    - 전원이 꺼져도 기록된 데이터들이 소멸되지 않는 비휘발성 메모리
+    - 주기억장치로 사용되기보단 주로 기본 입출력 시스템, 자가 진단 프로그램 같은 변경 가능성이 없는 시스템 소프트웨어를 기억하는데 이용됨
+    - 메인보드에 위치하며 이미 공장에서 생산될 때 납땜되어 출하됨
 
-사용자로부터 컴퓨터로 데이터를 입력받는 장치
+- **HDD(Hard Disk Drive)**
+    
+    ![computer_4.png](%E1%84%8F%E1%85%A5%E1%86%B7%E1%84%91%E1%85%B2%E1%84%90%E1%85%A5%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%AE%E1%84%89%E1%85%A5%E1%86%BC%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20c270799c368d46c5a91e7ffaea17dbe2/computer_4.png)
+    
+    - 자기디스크의 자기 배열방식을 변경하는 방식으로 읽거나 쓰는 하드디스크
+    - 충격에 약하며 소음이 발생함
+    - SSD가 나오면서 최근에는 많이 소멸되는 추세
+    
+- **SSD(Solid State Drive)**
+    
+    ![computer_3.png](%E1%84%8F%E1%85%A5%E1%86%B7%E1%84%91%E1%85%B2%E1%84%90%E1%85%A5%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%AE%E1%84%89%E1%85%A5%E1%86%BC%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20c270799c368d46c5a91e7ffaea17dbe2/computer_3.png)
+    
+    - 반도체를 이용한 하드디스크
+    - 속도가 매우 빠르며, 소음과 전력소모량이 적음
+    - 가격이 비싸다는 단점
 
-ex) 키보드, 마우스, 마이크, 트랙패드 등
+### 입출력 장치(I/O)
 
-### 3-2. 출력장치
+- **입력 장치**
+    - 컴퓨터 내부로 데이터를 입력하는 장치로, 키보드, 마우스 등이 있음
+- **출력 장치**
+    - 컴퓨터 데이터를 외부로 표현하는 장치로, 프린터, 모니터, 스피커 등이 있음
 
-컴퓨터로부터 사용자에게 이해할 수 있는 형태로 데이터를 출력해주는 장치
+### 시스템 버스
 
-ex) 모니터, 스피커, 프린터 등
+![computer_7.png](%E1%84%8F%E1%85%A5%E1%86%B7%E1%84%91%E1%85%B2%E1%84%90%E1%85%A5%E1%84%8B%E1%85%B4%20%E1%84%80%E1%85%AE%E1%84%89%E1%85%A5%E1%86%BC%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20c270799c368d46c5a91e7ffaea17dbe2/computer_7.png)
 
----
+CPU를 포함한 각 하드웨어 장치 간 통로로, 각 하드웨어 장치를 물리적으로 연결한 전선임
 
-### 4. 시스템 버스
+- 데이터 버스: 하드웨어 간 데이터를 전송하는 통로
+- 주소 버스: 데이터가 어디 도착해야 하는지에 대한 정보를 전달하는 통로
+- 제어 버스: CPU의 제어장치가 생성한 제어 신호를 다른 장치로 전달하는 통로
 
-CPU를 포함한 각 하드웨어 장치 간의 통로(각 하드웨어 장치를 물리적으로 연결한 전선)
-
-- 데이터 버스 - 하드웨어 간에 데이터를 전달하는 통로
-- 주소 버스 - 데이터가 어디에 도착해야 하는지에 대한 정보를 전달하는 통로
-- 제어 버스 - CPU의 제어장치가 생성한 제어 신호를 다른 장치로 전달하는 통로
-
-![computer2.png](./image/computer2.png)
 ---
 
 ## 소프트웨어
 
-### 1. 시스템 SW
+소프트웨어는 하드웨어의 동작을 지시하고 제어하는 명령어 집합으로, 크게 시스템 SW와 응용 SW로 나눌 수 있음
 
-- 컴퓨터 시스템 전체를 운영하고 관리하는 소프트웨어
-- 운영체제, 컴파일러, 어셈블러, 로더 등
+- 시스템 SW는 운영체제, 컴파일러, 어셈블러, 로더 등이 있음
+- 응용 SW는 일반적으로 프로그램이라고 지칭하는 것으로 MS Office, 한글 등이 있음
 
-### 2. 응용 SW
+### 면접질문
 
-- 사용자의 특정한 직업이나 요구에 따라 개발된 소프트웨어
-- 애플리케이션 또는 프로그램
-- MS Office, 한글 등
+1. 컴퓨터의 3대 구성요소는 무엇인가요?
+2. 컴퓨터의 5대 구성요소는 무엇인가요?
 
----
+### 출처
 
-*컴퓨터의 3대 구성요소 vs 5대 구성요소
+[https://codybuilder.com/27](https://codybuilder.com/27)
 
-3대 구성요소
+[https://hongcoding.tistory.com/139](https://hongcoding.tistory.com/139)
 
-- 중앙 처리 장치 CPU
-- 기억 장치 Memory
-- 입출력 장치
+[https://cosyp.tistory.com/148](https://cosyp.tistory.com/148)
 
-5대 구성요소
+[https://information-factory.tistory.com/59](https://information-factory.tistory.com/59)
 
-- 중앙 처리 장치
-- 기억 장치
-- 입력 장치
-- 출력 장치
-- 제어 장치
-
-*32비트 CPU와 64비트 CPU 주요 차이점
-
-- 주소 버스 크기
-- 데이터 버스 크기
-- 레지스터 크기
-- 명령어 처리 속도
-- 호환성
-- 메모리 접근 한계
-
-*시스템버스 구성하는 3가지 데이터 버스, 주소 버스, 제어 버스가 어디에 위치하는지
-
-데이터 버스 → CPU와 메모리, 그리고 주변장치들 사이에 위치
-
-주소 버스 → CPU와 메모리 사이에 위치
-
-제어 버스 → CPU와 다른 주변장치들 사이에 위치
-
-*RAM과 ROM에 각각 어떤 데이터가 저장되는지? 왜 둘다 필요한지?
-
-RAM 저장하는 데이터 - 프로그램의 명령어, 실행 중인 프로세스의 작업 데이터, 사용자가 실행하는 애플리케이션, 운영체제 등
-
-ROM 저장하는 데이터 - 주로 초기화 프로그램, 기본 입출력 시스템 (BIOS), 부팅 로더 등
-
-- 둘 다 필요한 이유
-    
-    : RAM은 데이터를 빠르게 읽고 쓸 수 있어서 프로그램의 실행과 데이터 처리에 최적화되어 있다. 그러나 전원이 꺼지면 내용이 사라지기 때문에, 일시적인 작업에 사용된다
-    
-    → ROM은 읽기 전용이지만, 전원이 꺼져도 데이터가 유지되므로 컴퓨터의 부팅과 초기와 작업을 위해 사용된다.
-    
-    두 가지 메모리의 조합으로 컴퓨터가 안정적으로 동작하고 사용자의 요구를 처리할 수 있다.
-    
-- 면접예상질문
-    
-    
-1. 시스템버스는 무엇인가요?
-2. 컴퓨터의 3대 구성요소는?
-3. 시스템 SW와 응용 SW 차이점에 대해 말해주세요
-
-> 출처
-> 
-
-[https://hongong.hanbit.co.kr/컴퓨터의-4가지-핵심-부품cpu-메모리-보조기억장/](https://hongong.hanbit.co.kr/%EC%BB%B4%ED%93%A8%ED%84%B0%EC%9D%98-4%EA%B0%80%EC%A7%80-%ED%95%B5%EC%8B%AC-%EB%B6%80%ED%92%88cpu-%EB%A9%94%EB%AA%A8%EB%A6%AC-%EB%B3%B4%EC%A1%B0%EA%B8%B0%EC%96%B5%EC%9E%A5/)
+[https://ssd0908.tistory.com/entry/롬ROM과-램RAM의-특징-및-차이점](https://ssd0908.tistory.com/entry/%EB%A1%ACROM%EA%B3%BC-%EB%9E%A8RAM%EC%9D%98-%ED%8A%B9%EC%A7%95-%EB%B0%8F-%EC%B0%A8%EC%9D%B4%EC%A0%90)
