[os]프로그램 실행순서 보충

--- a/OS/프로그램 실행 순서.md
+++ b/OS/프로그램 실행 순서.md
@@ -1,49 +1,56 @@
 # 프로그램 실행 순서
 
-![program3.png](./image/program3.png)
+# 1. 프로그램 실행의 의미
 
-![program1.png](./image/program1.png)
-### 프로그램이 실행 파일을 만드는 과정
+- 디스크에 존재하던 실행파일이 메모리에 적재된다.
+- 프로그램이 CPU를 할당받고 명령을 수행하고 있는 상태이다.
+
+# 2. 프로그램 실행순서
+
+![프로그램 실행순서.png](./image/프로그램%20실행순서.png)
+
+## 1단계) 실행파일 만들기
+
+전처리기 → 컴파일러 → 어셈블러 → 링커 를 거쳐 실행파일이 만들어진다.
 
 1. 전처리기
+    - 중심적인 코드 처리 전 사전 준비 처리
+    - 내부 소스 버전관리, 함수 및 상수 정의 등을 수행
+    - C에서 #include, #define 과 같은 걸 처리
+2. 컴파일러
+    - 고급언어로 작성된 소스 코드를 기계어(어셈블리어)로 바꿔준다.
+3. 어셈블러
+    - 어셈블리어를 이진코드(0101…)으로 바꿔준다.
+4. 링커
+    - 생성한 코드가 참조하는 함수와 라이브러리를 모아서 하나의 실행파일로 만든다.
+- 이후 loader에 의해 실행파일을 메모리에 적재하여 CPU가 명령어를 하나씩 실행시킨다.
 
-#inclue, #define 먼저 처리
+## 2단계) 프로그램 실행하기
 
-1. 컴파일러
+Load → Fetch → Decode → Execution을 거친다.
+완전히 완료 될 때까지 Fetch → Decode → Execution 은 한 줄씩 계속반복된다. 
 
-컴퓨터는 0과 1만 인식할 수 있기 때문에 우리가 이해하기 쉬운 코드들을 어셈블리어로 바꾸어준다
+1. Load
+    - 보조메모리에 있던 링커가 만든 실행파일을 메인 메모리에 로드한다.
+2. Fetch(인출)
+    - 메모리에 올라온 실행 명령어를 하나씩 CPU레지스터에 올린다.
+3. Decode(해석)
+    - (제어유닛이) 명령어를 복호화하고 명령을 한다.
+4. Excution(실행)
+    - 명령에 맞게 프로그램이 실행된다.  (ALU가 연산을 수행한다.)
+5. (프로그램 실행 후) Writeback (쓰기)
+    - 명령어대로 처리 완료된 데이터들을 메모리에 기록한다.
+    - 프로그램을 실행하면서도 내부 로직에서 동적으로 메모리를 할당하면 heap부분에 할당하거나,
+    - 함수가 호출되어 지역변수/매개변수를 사용하면 stack영역에 할당한다 → 메모리 구조 이해.
 
-1. 어셈블러
+---
 
-어셈블리어를 0과 1로 바꾸어준다
+# 면접질문
 
-1. 링커
+- 프로그램 실행과정을 두 단계로 설명하시오.
 
-참조해야 할 함수와 라이브러리를 모아서 하나의 실행팡이로 만들어준다
+# 출처
 
-![program2.png](./image/program2.png)
-
-### 컴퓨터가 읽기 쉽게 된 파일이 CPU에 실행되는 과정
-
-1. Fetch : 메인 메모리상에 존재하는 명령어를 CPU로 가져오는 작업
-2. Decode : 가져온 명령어를 CPU가 해석하는 단계
-3. Execution : 해석된 명령어의 명령대로 CPU가 실행하는 단계
-
-*총 정리
-
-1. 사용자가 운영체제에게 프로그램의 실행을 요청함
-2. 운영체제는 프로그램의 정보를 HDD나 SDD 같은 보조기억장치로부터 읽은 뒤, (+프로그램이 실행 파일을 만드는 과정=영우 노션 내용), 할당받은 메인 메모리(code, data, stack, heap)에 적재함
-3. CPU는 메인 메모리의 code 영역 내부에 있는 프로그램 실행 명령어들을 통해 프로그램을 실행함 (Fetch)
-4. 프로그램 내부 로직에서 동적으로 메모리를 할당하는 요청이 있다면, 해당 부분은 heap 영역에 할당함 (Decode) + CPU가 프로그램을 실행함
-5. 프로그램 내부 로직에서 함수가 호출되어 지역 변수/매개변수를 사용하면 stack 영역에 할당함 (Decode) + CPU가 프로그램을 실행함
-
-> 출저
-> 
-
-[https://com24everyday.tistory.com/288](https://com24everyday.tistory.com/288)
-
-[https://kasckasc.tistory.com/entry/2-프로그램의-실행-과정-및-CPU-구조와-원리#footnote_link_3_17](https://kasckasc.tistory.com/entry/2-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%EC%9D%98-%EC%8B%A4%ED%96%89-%EA%B3%BC%EC%A0%95-%EB%B0%8F-CPU-%EA%B5%AC%EC%A1%B0%EC%99%80-%EC%9B%90%EB%A6%AC#footnote_link_3_17)
-
-> 면접질문
-> 
-1. 프로그램 실행과정을 두단계로 설명하시오
+- [https://com24everyday.tistory.com/288](https://com24everyday.tistory.com/288)
+- [https://kasckasc.tistory.com/entry/2-프로그램의-실행-과정-및-CPU-구조와-원리#footnote_link_3_17](https://kasckasc.tistory.com/entry/2-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%EC%9D%98-%EC%8B%A4%ED%96%89-%EA%B3%BC%EC%A0%95-%EB%B0%8F-CPU-%EA%B5%AC%EC%A1%B0%EC%99%80-%EC%9B%90%EB%A6%AC#footnote_link_3_17)
+- [https://velog.io/@min9288/백엔드-개발-면접-질문운영체제](https://velog.io/@min9288/%EB%B0%B1%EC%97%94%EB%93%9C-%EA%B0%9C%EB%B0%9C-%EB%A9%B4%EC%A0%91-%EC%A7%88%EB%AC%B8%EC%9A%B4%EC%98%81%EC%B2%B4%EC%A0%9C)
