--- a/OS/컴퓨터의 구성요소.md
+++ b/OS/컴퓨터의 구성요소.md
@@ -39,7 +39,7 @@ CU, ALU, Register, Internal Bus로 구성되어 있음
 
 - **보조기억장치**
     - 주기억장치에 비해 읽기/쓰기 속도가 느리지만, 영구 저장이 가능함
-    - HDD, SDD 등이 있음
+    - HDD, SSD 등이 있음
     
 
 ---
