Update 운영체제 개념 및 발달과정.md

--- a/OS/운영체제 개념 및 발달과정.md
+++ b/OS/운영체제 개념 및 발달과정.md
@@ -4,13 +4,13 @@
 
 컴퓨터 시스템의 자원을 관리하고, 사용자 및 응용 프로그램에게 서비스를 제공하는 소프트웨어
 
-- 사용자가 컴퓨터의 하드웨어를 쉽게 사용하룻 있도록 인페이스를 제공하는 소프트웨어
+- 사용자가 컴퓨터의 하드웨어를 쉽게 사용 할 수 있도록 인터페이스를 제공하는 소프트웨어
 
 # 2. 운영체제 주요기능
 
-1. 자원관리
+1. 자원 관리
     - 컴퓨터 시스템 자원을 효율적으로 관리한다.
-    - 커널의 주요기능 참
+    - 커널의 주요기능 참고
 2. 자원 보호
     - 프로그램이나 다른 사용자가 데이터를 삭제하거나 중요 파일에 접근하지 못하게 자원들을 보호
 3. 인터페이스 제공
@@ -28,7 +28,7 @@
 - 사용 가능도 Availability
     - 시스템을 사용할 필요가 일을 때 즉시 사용 가능한 정도 (얼마나 빠르게 사용할 수 있는지)
 - 신뢰성 Reliability
-    - 시스템이 주어진 문제를 정호가하게 해결하는 정도
+    - 시스템이 주어진 문제를 정확하게 해결하는 정도
 - 처리능력=처리량 Throughput
     - 일정시간 내에 시스템이 처리하는 일의 양
 
@@ -36,7 +36,7 @@
 
 커널과 인터페이스(=쉘)로 나눌 수 있다.
 
-- 핵심 시기능이 커널에 모여있고, 쉘은 커널을 사용자가 편리하게 사용할 수 있도록하는 역할을 한다.
+- 핵심 기능이 커널에 모여있고, 쉘은 커널을 사용자가 편리하게 사용할 수 있도록하는 역할을 한다.
 
 ![OS_structure.png](./image/OS_structure.png)
 
@@ -57,7 +57,7 @@
 ## 4-2) 커널
 
 - 운영체제의 핵심이 되는 기능들이 모여있는 컴퓨터 프로그램
-- 컴퓨터가 부팅될 때 주기억장치에 전재도니 후 상주하면서 실행하며, 프로그램과 하드웨어 간의 인터페이스 역할
+- 컴퓨터가 부팅될 때 주기억장치에 적재된 후 상주하면서 실행하며, 프로그램과 하드웨어 간의 인터페이스 역할
 - 프로세스 관리, 기억장치 관리, 주변장치 관리, 파일 관리 기능을 한다.
 
 ### 커널의 주요기능
@@ -65,7 +65,7 @@
 1. CPU스케줄링을 통해 프로세스(스레드) 마다 CPU를 사용할 수 있는 시간을 분배하고 관리.
 2. 기억장치(메모리) 관리
     - 프로세스에게 기억공간을 할당하고 회수하는 방법을 결정
-    - 물리적인 자원인 메모리는 추장적 자원인 page, segment로 제공
+    - 물리적인 자원인 메모리는 추상적 자원인 page, segment로 제공
 3. 주변장치(I/O Device) 통신 관리
     - 디바이스 드라이버 관리를 통해 각종 외부 장치에 접근가능
 4. IPC(Inter Process Communication) : 한 컴퓨터 내부의 프로세스끼리 통신을 도움
@@ -74,21 +74,21 @@
     - TCP/IP 기반의 인터넷에 연결하거나, 응용프로그램이 네트워크를 사용하려면 운영체제에서 네트워크 프로트콜을 지원해야한다.
 6. 파일 관리 (파일 시스템)
     - 물리적 자원인 디스크를 추상적 자원인 file로 제공
-7. 인터럽트 핸들
+7. 인터럽트 핸들러
 
 # 5. 운영체제 실행방식
 
 - 커널을 메인메모리에 적재하여 컴퓨터를 시작하는 과정을 부팅(부트스트래핑)이라고 함.
-- (참고로 bootstap가 자동으로 설정되어지게 함이라는 일반적인 용어로도 쓰임으로 구분해야)
+- (참고로 bootstrap가 자동으로 설정되어지게 함이라는 일반적인 용어로도 쓰임으로 구분해야)
 1. 전원을 키면 ROM에 있는 BIOS가 로드 된다.
     - BIOS : 컴퓨터의 입출력을 처리하는 펌웨어(HW에 포함된 SW). 가장 기본적인 SW프로그램
-2. BIOS는 POST(Power on self test)를 진행하여 하드웨어의 장상적인 작동을 검사함.
+2. BIOS는 POST(Power on self test ; 테스트 프로그램)를 진행하여 하드웨어의 장상적인 작동을 검사함.
 
 ![Bios_POST.png](./image/Bios_POST.png)
 
 3. POST 에 이상이 없으면 BIOS는 *컴퓨터에 연결된 저장매체에서 설정된 부팅 순서*대로 부트로더를 메모리로 불러온다. 
     - 부트로더 : 커널이 올바르게 작동하기 위해 필요한 모든 관련 작업을 마무리하고 최종적으로 운영체제를 작동시키기 위한 프로그램
-    - 시스템적으로는 Disk의 MBR에 저장된 부팅 정보를 RAM으로 읽어온다.
+    - 시스템적으로는 Disk의 *MBR에 저장된 부팅 정보(=부트 로더)*를 RAM으로 읽어온다.
     - MBR; Master Boot Record : Disk의 첫 번째 섹터.
     - *컴퓨터에 연결된 저장매체에서 설정된 부팅 순서를 가지고 있는 프로그램을 Bootstrap, 부팅 프로그램이라고 함.*
     
