Update 프로그램 실행 순서.md

--- a/OS/프로그램 실행 순서.md
+++ b/OS/프로그램 실행 순서.md
@@ -35,7 +35,7 @@ Load → Fetch → Decode → Execution을 거친다.
 2. Fetch(인출)
     - 메모리에 올라온 실행 명령어를 하나씩 CPU레지스터에 올린다.
 3. Decode(해석)
-    - (제어유닛이) 명령어를 복호화하고 명령을 한다.
+    - CU(Control Unit ; 제어유닛)가 명령어를 복호화하고 명령을 한다.
 4. Excution(실행)
     - 명령에 맞게 프로그램이 실행된다.  (ALU가 연산을 수행한다.)
 5. (프로그램 실행 후) Writeback (쓰기)
