Update 프로그램 실행 순서.md
issue upddate

--- a/OS/프로그램 실행 순서.md
+++ b/OS/프로그램 실행 순서.md
@@ -32,6 +32,7 @@ Load → Fetch → Decode → Execution을 거친다.
 
 1. Load
     - 보조메모리에 있던 링커가 만든 실행파일을 메인 메모리에 로드한다.
+    - (운영체제에 로더 프로그램이 구현되어 있다. - exec() )
 2. Fetch(인출)
     - 메모리에 올라온 실행 명령어를 하나씩 CPU레지스터에 올린다.
 3. Decode(해석)
