--- a/OS/컴퓨터의 구성요소.md
+++ b/OS/컴퓨터의 구성요소.md
@@ -90,13 +90,19 @@ CU, ALU, Register, Internal Bus로 구성되어 있음
 <br></br>
 
 ### 시스템 버스
-![computer_7.png](./image/computer_7.png)
+![computer_7.png](./image/computer_7.jepg)
 
 CPU를 포함한 각 하드웨어 장치 간 통로로, 각 하드웨어 장치를 물리적으로 연결한 전선임
 
-- 데이터 버스: 하드웨어 간 데이터를 전송하는 통로
-- 주소 버스: 데이터가 어디 도착해야 하는지에 대한 정보를 전달하는 통로
-- 제어 버스: CPU의 제어장치가 생성한 제어 신호를 다른 장치로 전달하는 통로
+- **데이터 버스**
+    - 하드웨어 간 데이터를 전송하는 통로
+    - 기억장치와 입출력 장치의 명령어를 CPU로 보내거나, CPU의 연산결과를 기억장치와 입출력 장치로 보내는 '양방향' 버스임
+- **주소 버스**
+    - 데이터가 어디 도착해야 하는지에 대한 정보를 전달하는 통로
+    - CPU, 기억장치, 입출력 장치로 기억장치가 가지고 있는 주소를 전달하는 '단방향' 버스임 
+- **제어 버스**
+    - CPU의 제어장치가 생성한 제어 신호를 다른 장치로 전달하는 통로
+    - 읽기 동작(기억장치/입출력 장치 데이터 읽어서 CPU로 전달)과 쓰기 동작(CPU가 생성한 제어 신호 읽어서 기억장치/입출력 장치에 전달)을 모두 수행해야 하기 때문에 '양방향' 버스임 
 <br></br>
 ---
 
