--- a/OS/컴퓨터의 구성요소.md
+++ b/OS/컴퓨터의 구성요소.md
@@ -90,7 +90,7 @@ CU, ALU, Register, Internal Bus로 구성되어 있음
 <br></br>
 
 ### 시스템 버스
-![computer_7.png](./image/computer_7.jepg)
+![computer_7.png](./image/computer_7.jpeg)
 
 CPU를 포함한 각 하드웨어 장치 간 통로로, 각 하드웨어 장치를 물리적으로 연결한 전선임
 
