--- a/Network/쿠키와 세션.md
+++ b/Network/쿠키와 세션.md
@@ -10,26 +10,23 @@
 
 → 클라이언트의 정보를 유지하기 위해 필요하다.
 
-### connectionless
+## connectionless
 
 클라이언트가 요청을 한 후 응답을 받으면 그 연결을 끊어 버리는 특징
 
 - HTTP는 먼저 클라이언트가 request를 서버에 보내면, 서버는 클라이언트에게 요청에 맞는 response를 보내고 연결을 끊는다.
 - (HTTP 1.1에서 연결을 유지하고 재활용하는 기능이  Default로 추가되었고, keep-alive값으로 변경이 가능함.)
 
-### stateless
+## stateless
 
 통신이 끝나면 상태를 유지하지 않는 특징
 
 - 연결을 끊는 순간 클라이언트와 서버의 통신이 끝나고, 상태 정보도 유지 되지 않음.
 
-만약 쿠키와 세션을 사용하지 않으면, 쇼핑몰에서 옷을 구매하려고 로그인을 했는데 페이제를 이동할 때마다 계속 로그인을 해야한다.
-
+만약 쿠키와 세션을 사용하지 않으면, 쇼핑몰에서 옷을 구매하려고 로그인을 했는데 페이지를 이동할 때마다 계속 로그인을 해야한다.
+<br></br>
 # 1. 쿠키 Cookie
-
-클라이언트(브라우저) 로컬에 저장되는  key와 value이 들어있는 string 형식의 작은 데이터 파일
-
-쿠키 생긴 모양(?)
+클라이언트(브라우저) 로컬에 저장되는 key와 value이 들어있는 string 형식의 작은 데이터 파일
 
 - 사용자가 인증이 유효한 시간을 명시할 수 있으며, 브라우저가 종료되어도 유효 시간 남았으면 인증이 유지된다.
 - 클라이언트의 상태 정보를 로컬에 저장했다가 참조하는 방식이다.
@@ -49,11 +46,11 @@
 - 쇼핑몰 장바구니 기능
 - 자동 로그인, 팝업에서 “오늘 더 이상 이 창을 보지 않음” 체크
 ```
-
+![Cns_browserCookie.png](./image/cookie_1.png)
+<br></br>
 ## 2.1 쿠키의 구성요소
-
-- 이름(key) : 각 쿠기를 구별하는 데 사용
-- value : 쿠기의 이름과 관련된 값
+- 이름(key) : 각 쿠키를 구별하는 데 사용
+- value : 쿠키의 이름과 관련된 값
 - 유효시간 : 쿠키 유지시간
 - 도메인 : 쿠키를 전송할 도메인
 - 경로 : 쿠키를 전송할 요청 경로
@@ -69,20 +66,20 @@ chrome > F12 > Application > Storage > Cookies
 chrome의 경우 C:\Users\사용자이름\AppData\Local\Google\Chrome\User Data\Profile 1\Network 에 있다. sqlite 뷰어 등을 통해 확인 할 수 있다.
 
 ![CnS_chromeCookies2.png](./image/CnS_chromeCookies2.png)
-
+<br></br>
 ## 2.2 쿠키의 동작방식
 
 ![CokiSession_cookies.png](./image/CokiSession_cookies.png)
 
 1. 클라이언트가 페이지를 요청한다.
 2. 서버에서 쿠키를 생성한다.
-3. HTTP헤더에 쿠키를 포함 시켜 응답한다.
+3. HTTP 헤더에 쿠키를 포함시켜 응답한다.
 4. 브라우저가 종료되어도 쿠키 만료 기간이 안되면 클라이언트에서 보관하고 있다.
-5. 같은 요청을 할 경우 HTTP 헤더에 쿠키를 함께 보낸다.
-6. 서버에서 쿠키를 읽어 이전 상태 정보를 변경할 필요가 있을 때 쿠키를 업데이터 하여 변경된 쿠키를 HTTP헤더에 포함시켜 응답한다.
+5. **같은 요청을 할 경우 HTTP 헤더에 쿠키를 함께 보낸다.**
+6. 서버에서 쿠키를 읽어 이전 상태 정보를 변경할 필요가 있을 때, 쿠키를 업데이트하여 변경된 쿠키를 HTTP 헤더에 포함시켜 응답한다.
 
+<br></br>
 # 3. 세션 Session
-
 쿠키를 기반으로 하지만, 사용자 정보 파일을 서버 측에서 관리하는 데이터.
 
 **방문자가 웹 서버에 접속해 있는 상태를 하나의 단위로 보고 이를 세션이라한다.**
@@ -90,7 +87,7 @@ chrome의 경우 C:\Users\사용자이름\AppData\Local\Google\Chrome\User Data\
 - 서버에서는 클라이언트를 구분하기 위해, 세션 ID를 부여하여 웹 브라우저가 서버에 접속해서 브라우저를 종료할 때까지 인증상태를 유지한다.
 - 접속 시간에 제한을 두어 일정 시간 응답이 없으면 정보가 유지되지 않게 할 수 있다.
 - 클라이언트가 request를 보내면, 해당 서버 엔진이 클라이언트에게 유일한 ID를 부여하는 데 이것이 세션ID 이다.
-- 사용자에 대한 정보를 서버에 두기 때문에 쿠키보다 보안성이 좋지만, 사용자가 많을 수록 서버 메모리를 많이 차지하게 됨.
+- 사용자에 대한 정보를 서버에 두기 때문에 쿠키보다 보안성이 좋지만, 사용자가 많을수록 서버 메모리를 많이 차지하게 된다.
 - 따라서 동시 접속자 수가 많은 웹 사이트인 경우 서버에 과부하를 주어 성능이 저하될 수 있다.
     - **보안이 좋은 세션대신 쿠키를 사용하는 이유이기도 하다! 쿠키와 세션을 적절히 사용하여 보안과 속도, 자원낭비 측면의 밸런스를 잡는것!**
 
@@ -140,9 +137,8 @@ HttpSession session = request.getSession(true); /*디폴트가 true*/
 - 세션 ID로 클라이언트를 구분해서 클라이언트의 요구에 맞는 서비스를 제공한다.
 - 보안 면에서 쿠키보다 우수하다.
 - 사용자가 많아질수록 서버메모리를 많이 차지하게 된다.
-
+<br></br>
 ## 3.2 세션 동작 방식
-
 ![CokiSession_session.png](./image/CokiSession_session.png)
 
 1. 클라이언트가 서버에 접속 시 세션ID를 발급받음.
@@ -151,25 +147,22 @@ HttpSession session = request.getSession(true); /*디폴트가 true*/
 4. 서버는 세션 ID를 전달받아서, 별다른 작업없이 세션 ID로 세션에 있는 클라이언트 정보를 가져와서 사용
 5. 클라이언트 정보를 가지고 서버 요청을 처리하여 클라이언트에게 응답.
 
+<br></br>
 # 4. 쿠키와 세션의 차이
 
 |  | 쿠키 | 세션 |
 | --- | --- | --- |
 | 저장 위치 | 클라이언트(졉속자의 PC) | 웹 서버 |
 | 저장 형식 | text | Object |
-| ⭐만료 시점 | 쿠키 저장시 설정
-(브라우저가 종료되어도, 만료시점이 지나지 않으면 자동으로 삭제되지 않는다.) | 설정된 기간이 지나거나 브라우저 종료시 삭제된다. |
-| 사용하는 자원
-(리소스) | 클라이언트 리소스 | 웹 서버 리소스 |
-| 용량 제한 | 총 300개
-하나의 도메인 당 20개
-하나의 쿠키 당 4KB | 서버가 허용하는 범위 내에서는 용량 제한없음 |
+| ⭐만료 시점 | 쿠키 저장시 설정(브라우저가 종료되어도, 만료시점이 지나지 않으면 자동으로 삭제되지 않음) | 설정된 기간이 지나거나 브라우저 종료시 삭제됨 |
+| 사용하는 자원(리소스) | 클라이언트 리소스 | 웹 서버 리소스 |
+| 용량 제한 | 총 300개 (하나의 도메인 당 20개, 하나의 쿠키 당 4KB) | 서버가 허용하는 범위 내에서는 용량 제한없음 |
 | 속도 | 세션보다 빠르다 | 쿠키보다 느리다 |
 | 보안 | 세션보다 안좋다 | 쿠키보다 좋다  |
 - 세션은 서버의 처리가 필요하기 때문에 쿠키보다 보안면에서 우수하지만 속도면에서 느리다.
 - 쿠키는 로컬에 저장되므로 변질되거나, request에서 스니핑 당할 우려가 있어 보안에 취약하지만, 세션은 세션ID만 저장하고 ID로 구분하여 서버에서 처리하여 보안이 좋다.
 
-### [참고]쿠키/세션 만 이용해 상태를 유지한다면
+### [참고]쿠키 or 세션만 이용해 상태를 유지한다면
 
 - 쿠키를 사용하는 상태유지
 
