--- a/Network/쿠키와 세션.md
+++ b/Network/쿠키와 세션.md
@@ -174,7 +174,7 @@ HttpSession session = request.getSession(true); /*디폴트가 true*/
 
 ![CnS_cookiesessionstate.png](./image/CnS_cookiesessionstate.png)
 
-# 5. 캐시와는 다르다!
+# 5. [캐시](https://github.com/psyStudy/CS_study/blob/main/Network/웹%20캐시.md)와는 다르다!
 
 - 캐시는 이미지나, css, js파일 등을 브라우저나 서버 앞 단에 저장해놓고 사용하는 것.
 - 한번 캐시에 저장되면 브라우저를 참고하기 때문에 서버에서 변경이 되어도 사용자는 변경되지 않은 것 처럼 보일 수 있다.
