Update 운영체제 개념 및 발달과정.md

--- a/OS/운영체제 개념 및 발달과정.md
+++ b/OS/운영체제 개념 및 발달과정.md
@@ -108,9 +108,12 @@
     
 ---
 
-# 6. 운영체제 발달과정
+# 6. 운영체제 운영방식 및 발달과정
 
-일괄처리 시스템 → 시분할시스템&다중처리 시스템&다중프로그래밍&실시간처 → 범용 시스템 → 분산처리 시스템
+[1세대] 일괄처리 시스템       
+[2세대] 시분할 시스템, 다중 프로그래밍 시스템, 실시간 처리 시스템, 다중 처리 시스템     
+[3세대] 다중 모드 처리(여러방식 혼합)      
+[4세대] 분산처리 시스템
 
 ### 1. 일괄처리 시스템 (Batch Processing System)
 
@@ -120,7 +123,7 @@
 
 ![BatchProcessingSystem.png](./image/BatchProcessingSystem.png)
 
-### 2. 다중 프로그래밍 시스템
+### 2. 다중 프로그래밍 시스템 Multi Programming
 
 - 하나의 CPU와 주기억 장치(RAM)를 이용하여 여러 개의 프로그램을 동시에 처리하는 방식
 - 메모리에 여러개의 프로그램이 동시에 상주한다.
@@ -128,8 +131,9 @@
 - CPU와 대화하면서 처리(= 작업 스케줄링과 cpu스케줄링을 한다)하여 CPU 사용률과 처리량이 증가함
 
 ![MultiProgrammingSysterm.png](./image/MultiProgrammingSysterm.png)
+![다중 프로그래밍에서의 실](https://user-images.githubusercontent.com/60220571/273870648-0e2c9a3f-8f63-4d04-99b3-07d1364d1d02.png)
 
-### 3. 시분할 시스템 (= 대화형 시스템, Interactive 시스템)
+### 3. 시분할 시스템 Time Sharing (= 대화형 시스템, Interactive 시스템)
 
 - 시간을 분할하여 여러 사용자들에게 컴퓨터 자원을 번갈아가며 할당하는 방식
 - 모든 컴퓨터 사용자에게 똑같은 서비스를 제공하는 것이 목표
@@ -140,26 +144,31 @@
 [프로세스 스케줄링](https://www.notion.so/e96727ed7e0246daaefd224e1efca8dd?pvs=21)
 
 ![InteractiveSystem.png](./image/InteractiveSystem.png)
+![](https://s3.ap-northeast-2.amazonaws.com/static.gracieuxyh.dev/os/time-sharing.png)
 
-### 4. 실시간 시스템
-
-- 외부의 제어 대상으로부터 입력되는 데이터를 짧은 시간, 또는 특정시간 내에 결과를 출력하거나 응답
+### 4. 실시간 시스템 Real Time Processing
+- 자료가 수신되는 즉시 처리하여 사용자 입력에 즉시 응답할 수 있는 시스템
+- 빠른 응용처리가 가능해야하고, 높은 시스템 성능을 요구한다.
+- 외부의 제어 대상(시스템 사용주체)으로부터 입력되는 데이터를 짧은 시간, 또는 deadline 내에 결과를 출력하거나 응답
 - 데이터가 무작위로 갑자기 날아오기 때문에 빠른 입출력장치 필요
 - 동시에 데이터가 날아오는 것을 예방하여 우선순위를 잘 짜놓아야 함
+- 예시) 좌석 예약, 은행 업무 시스템 
 
-### 5. 다중처리 시스템
+### 5. 다중 처리 시스템 Multi-Processing
 
-- 여러 대의 CPU와 하나의 주기억장치를 이용하여 여러 개의 프로그램을 동시에 처리하는 방식
-- 단일 운영체제에 의해 관리되며, 하나의 CPU가 고장 나더라도 시스템의 신뢰성과 안정성 보장 가능
+- 여러 개의 CPU(정확히는 코어)와 하나의 주기억장치를 이용하여 여러 개의 프로그램을 동시에 처리하는 방식
+- 단일 운영체제에 의해 관리되며, 하나의 CPU core가 고장 나더라도 시스템의 신뢰성과 안정성 보장 가능
 
 ![MultiProcessingSysterm.png](./image/MultiProcessingSysterm.png)
+![](https://s3.ap-northeast-2.amazonaws.com/static.gracieuxyh.dev/os/multi-processing.png)
 
-### 6. 분산 처리 시스템
+### 6. 분산 처리 시스템 Distributed Processing
 
 - 각 시스템은 자신의 운영체제와 메모리, 프로세스를 가지고 있어서 독립적으로 운영되지만, 필요할 때 서로 통신하는 시스템
+      - 통신 네트워크를 통해 메시지를 주고 받으므로써 정보를 교환한다.
+      - (말 그대로 network 통신을 한다. 범위에 따라 LAN, WAN 등으로 분류 / 위상(topology)에 따라 성형, 망형, 트리형... / )
 - 사용자의 접근을 제어하면서 CPU, 입출력장치 등 동시에 사용하는 자원을 편리하게 공유함
-- ex) 네트워크 안 프린터 서버에 연결된 프린터
-- 파일 서버에 연결된 DB
+- ex) 네트워크 안 프린터 서버에 연결된 프린터, 파일 서버에 연결된 DB
 
 ![DistributedProcessingSystem.png](./image/DistributedProcessingSystem.png)
 
@@ -187,3 +196,5 @@
 - [https://minkwon4.tistory.com/295](https://minkwon4.tistory.com/295)
 - [https://velog.io/@byunji_jump/운영체제-프로세스와-스레드](https://velog.io/@byunji_jump/%EC%9A%B4%EC%98%81%EC%B2%B4%EC%A0%9C-%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4%EC%99%80-%EC%8A%A4%EB%A0%88%EB%93%9C)
 - [https://cocoon1787.tistory.com/685](https://cocoon1787.tistory.com/685)
+- https://melodist.github.io/docs/OS/Scheduling1
+- https://m.blog.naver.com/na_qa/221683729130
