Update 운영체제 개념 및 발달과정.md

--- a/OS/운영체제 개념 및 발달과정.md
+++ b/OS/운영체제 개념 및 발달과정.md
@@ -110,10 +110,10 @@
 
 # 6. 운영체제 운영방식 및 발달과정
 
-[1세대] 일괄처리 시스템       
-[2세대] 시분할 시스템, 다중 프로그래밍 시스템, 실시간 처리 시스템, 다중 처리 시스템     
-[3세대] 다중 모드 처리(여러방식 혼합)      
-[4세대] 분산처리 시스템
+[1세대(1950`)] 일괄처리 시스템 
+[2세대(1960초반)] 시분할 시스템, 다중 프로그래밍 시스템, 실시간 처리 시스템, 다중 처리 시스템     
+[3세대(1960중반~70)] 다중 모드 처리(여러방식 혼합)      
+[4세대(1970~)] 분산처리 시스템
 
 ### 1. 일괄처리 시스템 (Batch Processing System)
 
